# forgelsp

./: .gitignore  Cargo.toml  README.md  forgevsc.d.ts  forgevsc.js  forgevsc_bg.wasm  forgevsc_bg.wasm.d.ts  package.json
.cache/: aHR0cHM6Ly9yYXcuZ2l0aHVidXNlcmNvbnRlbnQuY29tL3RyeWZvcmdlL2Zvcmdlc2NyaXB0L2Rldi9tZXRhZGF0YS9mdW5jdGlvbnMuanNvbg.json
.github/workflow/: build.yml
.github/workflows/: build.yml
.guidelines/: AI_GUIDELINES.md  ARCHITECTURE.md  CODING_STYLE.md  CONTRIBUTING.md  DOCUMENTATION.md  README.md  WILDCARD_EXCEPTION.md
docs/: diagnostics.md  hover.md  main.md  metadata.md  parser.md  semantic.md  server.md  utils.md
src/: commands.rs  completion.rs  definition.rs  depth.rs  diagnostics.rs  folding_range.rs  hover.rs  lib.rs  main.rs  metadata.rs  parser.rs  semantic.rs  server.rs  signature_help.rs  utils.rs  wasm_api.rs
