[package]
name = "forgevsc"
version = "0.1.0"
edition = "2024"

[dependencies]
openssl = { version = "0.10", optional = true, features = ["vendored"] }
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "time",
  "full",
] }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
moka = { version = "0.12", features = ["future"] }
sqlx = { version = "0.7", features = [
  "sqlite",
  "runtime-tokio-rustls",
  "macros",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
futures = "0.3.31"
base64 = "0.22.1"
nom = "8.0.0"
memchr = "2.7.6"
smallvec = "1.15.1"
regex = "1.12.2"
tower-lsp = "0.20.0"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tempfile = "3"
wiremock = "0.6"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
