[package]
name = "forgevsc"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "time",
  "full",
] }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
futures = "0.3.31"
base64 = "0.22.1"
nom = "8.0.0"
smallvec = "1.15.1"
regex = "1.12.2"
tower-lsp = "0.20.0"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
tracing-appender = "0.2.4"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
